cambio of  por el asList tema de java 8